--- a/day_6/styles.css
+++ b/day_6/styles.css
@@ -118,6 +118,10 @@ button:hover {
 
 .wrap-picture {
   position: relative;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 .circle-1, .circle-2 {
@@ -135,7 +139,7 @@ button:hover {
   height: 99px;
   border-color:  #786450  transparent #786450  #786450 ;
   border-radius: 89px;
-  transform: translate(-1px, -1px);
+  transform: translate(6px, -1px);
 }
 
 .circle-2 {
@@ -143,15 +147,15 @@ button:hover {
   height: 93px;
   border-color:  #786450  #786450  #786450 transparent;
   border-radius: 89px;
-  transform: translate(2px, 2px);
+  transform: translate(6px, 2px);
 }
 
-.circle-1:hover {
-  transform: rotate(-360deg);
+.wrap-picture > .circle-1:hover {
+  transform: translate(6px, -1px) rotate(360deg);
 }
 
-.circle-2:hover {
-  transform: rotate(-360deg);
+.wrap-picture > .circle-2:hover {
+  transform: translate(6px, 2px) rotate(360deg);
 }
 
 .picture {
