--- a/day_7/styles.css
+++ b/day_7/styles.css
@@ -33,6 +33,21 @@
   border-radius: 3px;
   background-color: white;
   color: white;
+  z-index: 1;
+  position: absolute;
+  transition: 1s;
+  -webkit-transition: 1s;
+}
+
+.transition-notifications {
+  margin-left: 300px;
+}
+
+.section {
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: center;
 }
 
 .title {
@@ -55,6 +70,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.menu-left-icon:hover {
+  cursor: pointer;
 }
 
 .wrap-line-circle {
@@ -156,4 +175,45 @@
 
 p {
   margin: 0;
+}
+
+.menu-options {
+  background-color: #43627D;
+  width: 180px;
+  height: 280px;
+  position: absolute;
+  z-index: 0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+
+.transition-menu-options {
+  margin-right: 140px;
+}
+
+.menu-options > ul {
+  list-style-type: none;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 12px;
+  color: white;
+  opacity: 0.5;
+  padding: 0 30px;
+}
+
+li {
+  display: flex;
+  align-items: center;
+}
+
+li:before {
+  content: '';
+  display: flex;
+  width: 8px;
+  height:8px;
+  border: 2px solid white;
+  opacity: 0.4;
+  margin-right: 5px;
 }
