--- a/day_7/styles.css
+++ b/day_7/styles.css
@@ -62,6 +62,7 @@
   border-radius: 3px 3px 0 0;
   height: 50px;
   width: 100%;
+  position: relative;
 }
 
 .menu-left-icon {
@@ -70,6 +71,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .menu-left-icon:hover {
@@ -103,10 +105,11 @@
 }
 
 .square-icon {
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
   border: 2px solid white;
   opacity: 0.4;
+  cursor: pointer;
 }
 
 .resume {
@@ -130,7 +133,7 @@
 .text {
   width: 92%;
   float: right;
-  margin-bottom: 15px;
+  animation: display-notifications 1.5s forwards;
 }
 
 .text:hover {
@@ -199,21 +202,79 @@ p {
   justify-content: space-evenly;
   font-size: 12px;
   color: white;
-  opacity: 0.5;
-  padding: 0 30px;
+  padding: 0;
 }
 
 li {
   display: flex;
   align-items: center;
+  height: 45px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 30px;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 0.5s;
+}
+
+li:hover {
+  background-color: #272C34;
+  opacity: 1;
+  color: white;
+}
+
+li:hover::before {
+  opacity: 1;
 }
 
 li:before {
   content: '';
   display: flex;
-  width: 8px;
-  height:8px;
+  width: 6px;
+  height: 6px;
   border: 2px solid white;
   opacity: 0.4;
   margin-right: 5px;
+}
+
+.search-box {
+  width: 230px;
+  height: 27px;
+  border-radius: 30px;
+  background-color: white;
+  position: absolute;
+  box-sizing: border-box;
+  padding: 5px 15px;
+  margin-right: 15px;
+  z-index: -1;
+  border: 0;
+  opacity: 0;
+  transition: all 1s;
+  -webkit-transition: all 0.5s;
+}
+
+.search-box:focus {
+  outline-width: 0;
+}
+
+.search-box::placeholder {
+  font-size: small;
+  color: #afafaf;
+}
+
+.search-transition {
+  z-index: 1;
+  opacity: 1;
+  margin-right: 50px;
+}
+
+@keyframes display-notifications {
+  0% {
+  opacity: 0;
+  margin-top: 20px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 8px;
+  }
 }
