--- a/day_8/styles.css
+++ b/day_8/styles.css
@@ -25,11 +25,54 @@
   display: grid;
   place-content: center;
   background-color: black;
+  filter: contrast(25);
 }
 
 .circle {
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   background-color: white;
+  filter: blur(10px)
+}
+
+.ink {
+  position: absolute;
+  border-radius: 50%;
+  background-color: white;
+  transform-origin: 35px 35px;
+  animation: rotation 3s ease-in-out infinite;
+  filter: blur(4px);
+}
+
+.one {
+  transform-origin: bottom left;
+  width: 50px;
+  height: 50px;
+  right: 0;
+}
+
+.two {
+  transform-origin: top right;
+  width: 35px;
+  height: 35px;
+  bottom: 0;
+  right: 0;
+  animation-duration: 4s;
+}
+
+.three {
+  transform-origin: top right;
+  width: 55px;
+  height: 35px;
+  animation-duration: 2s;
+  top: 50%;
+  bottom: 50%;
+  left: -30px;
+}
+
+@keyframes rotation {
+  100% {
+    transform: rotate(360deg) translate3d(0, 0, 0);
+  }
 }
