--- a/day_9/styles.css
+++ b/day_9/styles.css
@@ -129,9 +129,10 @@
   border-radius: 50%;
   background-color: #F6EDBD;
   position: absolute;
-  z-index: 4;
-  /*bottom: 0;*/
+  bottom: 80px;
+  left: 40px;
   box-shadow: 1px 1px 12px 0px #fffeed;
+  animation: moon 2s ease-in-out forwards;
 }
 
 .blur {
@@ -177,4 +178,224 @@
   top: 3px;
   width: 8px;
   height: 8px;
+}
+
+.drops {
+  position: relative;
+  width: 12px;
+  height: 20px;
+  transform: translate(395px, 0);
+  z-index: 2;
+  animation: drops 1s infinite ease-in;
+}
+
+.triangle {
+  clip-path: polygon(65% 0%, 0% 100%, 100% 100%);
+  background: hsl(206deg 100% 73%);
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  right: 1px;
+}
+
+.circle {
+  width: 12px;
+  height: 10px;
+  background: hsl(206deg 100% 73%);
+  position: absolute;
+  top: 6px;
+  clip-path: circle(46% at 51% 53%);
+}
+
+.rain {
+  width: 400px;
+  height: 400px;
+  display: flex;
+}
+
+.d-two {
+  transform: translate(365px, -15px);
+  animation: d-two 1.2s infinite ease-in;
+  animation-delay: 0.2s;
+}
+
+.d-three {
+  transform: translate(335px, -15px);
+  animation: d-three 1s infinite ease-in;
+  animation-delay: 0.5s;
+}
+
+.d-four {
+  transform: translate(305px, -15px);
+  animation: d-four 1.1s infinite ease-in;
+  animation-delay: 0.1s;
+}
+
+.d-five {
+  transform: translate(250px, -15px);
+  animation: d-five 0.8s infinite ease-in;
+}
+
+.d-six {
+  transform: translate(200px, -15px);
+  animation: d-six 0.9s infinite ease-in;
+}
+
+.d-seven {
+  transform: translate(150px, -15px);
+  animation: d-seven 1s infinite ease-in;
+}
+
+.d-eight {
+  transform: translate(100px, -15px);
+  animation: d-eight 0.7s infinite ease-in;
+}
+
+.d-nine {
+  transform: translate(50px, -15px);
+  animation: d-nine 1.1s infinite ease-in;
+}
+
+.d-ten {
+  transform: translate(-58px, -15px);
+  animation: d-ten 0.8s infinite ease-in;
+}
+
+.d-mini {
+  transform: translate(200px, 0);
+  animation: d-mini 1s infinite ease-in;
+  opacity: 0.3;
+}
+
+.t-mini {
+  width: 8px;
+  height: 8px;
+}
+
+.c-mini {
+  width: 100%;
+  height: 100%;
+  top: 6px;
+  left: 0;
+  clip-path: circle(25% at 59% 17%);
+}
+
+.d-mini-two {
+  transform: translate(150px, 0);
+  animation: d-mini-two 1.1s infinite ease-in;
+  opacity: 0.5;
+}
+
+.d-mini-three {
+  transform: translate(70px, 0);
+  animation: d-mini-three 0.7s infinite ease-in;
+  opacity: 0.6;
+}
+
+.d-mini-four {
+  transform: translate(0, 0);
+  animation: d-mini-four 0.8s infinite ease-in;
+  opacity: 0.4;
+}
+
+.d-mini-four {
+  transform: translate(-50px, 0);
+  animation: d-mini-five 1s infinite ease-in;
+  opacity: 0.4;
+}
+
+@keyframes moon {
+  100% {
+    transform: translate(0, -200px);
+  }
+}
+
+@keyframes drops {
+  100% {
+    transform: translate(360px, 310px);
+  }
+}
+
+@keyframes d-two {
+  100% {
+    transform: translate(310px, 320px);
+  }
+}
+
+@keyframes d-three {
+  100% {
+    transform: translate(260px, 320px);
+  }
+}
+
+@keyframes d-four {
+  100% {
+    transform: translate(210px, 320px);
+  }
+}
+
+@keyframes d-five {
+  100% {
+    transform: translate(150px, 320px);
+  }
+}
+
+@keyframes d-six {
+  100% {
+    transform: translate(100px, 320px);
+  }
+}
+
+@keyframes d-seven {
+  100% {
+    transform: translate(45px, 320px);
+  }
+}
+
+@keyframes d-eight {
+  100% {
+    transform: translate(-5px, 320px);
+  }
+}
+
+@keyframes d-nine {
+  100% {
+    transform: translate(-60px, 320px);
+  }
+}
+
+@keyframes d-ten {
+  100% {
+    transform: translate(-120px, 320px);
+  }
+}
+
+@keyframes d-mini {
+  100% {
+    transform: translate(85px, 320px);
+  }
+}
+
+@keyframes d-mini-two {
+  100% {
+    transform: translate(35px, 320px);
+  }
+}
+
+@keyframes d-mini-three {
+  100% {
+    transform: translate(-50px, 320px);
+  }
+}
+
+@keyframes d-mini-four {
+  100% {
+    transform: translate(-105px, 320px);
+  }
+}
+
+@keyframes d-mini-five {
+  100% {
+    transform: translate(-155px, 320px);
+  }
 }
