--- a/day_10/styles.css
+++ b/day_10/styles.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&display=swap');
+body {
+  font-size: 12px;
+}
+
 .frame {
   position: absolute;
   top: 50%;
@@ -34,15 +38,84 @@
   border: 7px solid #3A3A3A;
   display: grid;
   place-content: center;
+  position: relative;
 }
 
 .doted-circle {
-  width: 200px;
-  height: 200px;
+  width: 190px;
+  height: 190px;
   border-radius: 50%;
   border: 4px dotted #c7c7c7;
 }
 
 .info {
   text-align: center;
+  color: white;
+  display: grid;
+  place-content: center;
+  height: 100%;
+}
+
+.info > p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.time {
+  font-size: 50px;
+}
+
+.calories {
+  margin-left: 25px;
+}
+
+.heartbeat {
+  margin-left: 10px;
+}
+
+.heartbeat::before {
+  content: "❤️";
+  display: inline-block;
+  font-size: 9px;
+  animation: beating .5s infinite;
+  vertical-align: text-top;
+}
+
+.spinner {
+  clip-path: url(#circle);
+  animation: loading 4s linear infinite;
+  stroke-dasharray: 659;
+  stroke-width: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
+}
+
+.svg {
+  width: 100%;
+  height: 100%;
+}
+
+#circle {
+  stroke: #FA7373;
+  fill: none;
+}
+
+@keyframes loading {
+  0% {
+    stroke-dashoffset: 2636;
+  }
+  100% {
+    stroke-dashoffset: 1318;
+  }
+}
+
+@keyframes beating {
+  from {
+    transform: scale(0.9);
+  }
+  to {
+    transform: scale(1);
+  }
 }
